# asclepius

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  NOTICE  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/asclepius/: __init__.py  authz.py  config.py  main.py  middleware.py
backend/asclepius/audit/: service.py
backend/asclepius/auth/: cookies.py  oidc.py  rate_limit.py  routes.py  session.py
backend/asclepius/backup/: __init__.py  db.py  scheduler.py
backend/asclepius/chat/: message_builder.py  provider_router.py  routes.py  service.py
backend/asclepius/config/: __init__.py  models.py  resolver.py
backend/asclepius/db/: connection.py  init.py  schema.sql
backend/asclepius/documents/: ai_routes.py  child_routes.py  corrections.py  file_routes.py  link_routes.py  routes.py  service.py  upload_routes.py
backend/asclepius/email/: __init__.py  sender.py  templates.py
backend/asclepius/events/: __init__.py  routes.py
backend/asclepius/imaging/: __init__.py  bundles.py  frames.py  reports.py  routes.py  service.py
backend/asclepius/lab_results/: __init__.py  routes.py
backend/asclepius/llm/: base.py  claude.py  gate.py  json_utils.py  ollama.py  openai_provider.py  prompt_manager.py  prompts.py
backend/asclepius/llm/prompts_data/: chat_system.yaml  classification.yaml  document_edit.yaml  extraction_bloodtest.yaml  extraction_discharge.yaml  extraction_er_report.yaml  extraction_imaging_report.yaml  extraction_insurance_claim.yaml  (+18 more)
backend/asclepius/normalization/: __init__.py  alias_lookup.py  auto_merge.py  knowledge_base.py  resolver.py  routes.py  service.py
backend/asclepius/patients/: routes.py  service.py
backend/asclepius/pipeline/: ai_edit.py  chunked_extraction.py  dicom_ingest.py  doc_types.py  entity_matching.py  extraction_merge.py  extraction_sanitize.py  extractor.py  extractor_db.py  extractor_writers.py  few_shot.py  inbox_sweep.py  ocr.py  ocr_cache.py  organizer.py  processor.py  provider_factory.py  region_translator.py  reprocessor.py  routes.py  section_processor.py  stage_events.py  state.py  text_utils.py  translator.py  vision_extractor.py  vision_io.py  watcher.py
backend/asclepius/settings/: backup_routes.py  logs_routes.py  prompts_routes.py  provider_routes.py  routes.py  smtp_routes.py  users_routes.py  view_prefs_routes.py
backend/asclepius/setup/: routes.py
backend/asclepius/share/: __init__.py  admin_routes.py  audit.py  cookies.py  dependencies.py  doctor_routes.py  otp.py  public_routes.py  queue.py  rate_limit.py  service.py  sessions.py  shares.py  tokens.py  watermark.py
backend/asclepius/util/: __init__.py  dates.py  paths.py  text.py
backend/asclepius/vault/: routes.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_auth.py  test_backup_char.py  test_child_records_authz.py  test_db_connection.py  test_db_migration.py  test_documents.py  test_documents_authz.py  test_events_authz.py  test_extraction_merge_char.py  test_imaging_link_persistence.py  test_lab_results.py  test_llm_gate.py  test_llm_providers_char.py  test_no_raw_connect.py  test_normalization.py  test_normalization_authz.py  test_oidc_role_sync.py  test_paths.py  test_patients.py  test_pipeline.py  test_prompt_override_char.py  test_replace_file.py  test_search.py  test_security.py  test_settings.py  test_settings_authz.py  test_settings_roundtrip_char.py  test_share_e2e.py  test_share_single_session.py  test_vision_io_char.py  test_zip_upload.py
(+305 files in other folders)
