[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asclepius"
version = "1.1.3"
description = "Asclepius — self-hosted medical records manager"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "aiosqlite>=0.22.1",
    "python-multipart>=0.0.27",
    "itsdangerous>=2.2.0",
    "bcrypt>=5.0.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
    "pytesseract>=0.3.13",
    "pydicom>=3.0.2",
    "pymupdf>=1.27.2.3",
    "httpx>=0.28.1",
    "anthropic>=0.99.0",
    "pillow>=12.2.0",
    "python-magic>=0.4.27",
    "authlib>=1.7.1",
    "numpy>=2.4.4",
    "rapidfuzz>=3.14.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "ruff>=0.15.12",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"asclepius.llm" = ["prompts_data/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
