[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asclepius"
version = "1.6.0"
description = "Asclepius — self-hosted medical records manager"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "aiosqlite>=0.22.1",
    "python-multipart>=0.0.32",
    "itsdangerous>=2.2.0",
    "bcrypt>=5.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
    "pytesseract>=0.3.13",
    "pydicom>=3.0.2",
    "pymupdf>=1.28.0",
    "httpx>=0.28.1",
    "anthropic>=0.116.0",
    "pillow>=12.3.0",
    "python-magic>=0.4.27",
    "authlib>=1.7.2",
    "numpy>=2.5.1",
    "rapidfuzz>=3.14.5",
    "aiosmtplib>=5.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "ruff>=0.15.21",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"asclepius.llm" = ["prompts_data/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
